--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,11 @@ language: node_js
 
 addons:
   apt:
+    sources:
+    - ubuntu-toolchain-r-test
     packages:
+    - gcc-4.8
+    - g++-4.8
     - build-essential
-    - libusb-dev
+    - libusb-1.0-0-dev
     - libudev-dev
-    - libusb
