--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
     "usb": "^1.5.0"
   },
   "devDependencies": {
+    "chai": "^4.2.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.17.2",
     "mocha": "^6.1.4",
+    "mockery": "^2.1.0",
     "remark-cli": "^6.0.1",
-    "remark-preset-lint-recommended": "^3.0.2"
+    "remark-preset-lint-recommended": "^3.0.2",
+    "sinon": "^7.3.2"
   }
 }
