--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "npm run lint:js && npm run lint:md",
     "lint:js": "eslint ./lib",
     "lint:md": "remark .",
-    "test": "mocha"
+    "test": "mocha",
+    "coverage": "nyc mocha"
   },
   "dependencies": {
     "async": "^3.0.0",
@@ -26,6 +27,7 @@
     "eslint-plugin-import": "^2.17.2",
     "mocha": "^6.1.4",
     "mockery": "^2.1.0",
+    "nyc": "^14.1.1",
     "remark-cli": "^6.0.1",
     "remark-preset-lint-recommended": "^3.0.2",
     "sinon": "^7.3.2"
