--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "byline": "^5.0.0",
     "node-hid": "^0.7.7",
     "smart-buffer": "^4.0.2",
-    "stream-buffers": "^3.0.2",
-    "usb": "^1.5.0"
+    "stream-buffers": "^3.0.2"
   },
   "devDependencies": {
     "chai": "^4.2.0",
